fixed bugs on iphone

--- a/app/scss/components/blocks/_catalog__card-item.scss
+++ b/app/scss/components/blocks/_catalog__card-item.scss
@@ -117,6 +117,7 @@
              rgba(60, 167, 244, 0.9) 55.2%,
              rgba(140, 69, 255, 0.9) 100%
           );
+          border-radius: 12px;
           opacity: 1;
        }
     }
